# inscriva

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
apps/desktop-macos/: README.md  package.json
apps/desktop-macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-macos/src-tauri/icons/: icon.icns
apps/desktop-macos/src-tauri/src/: book.rs  git_ops.rs  github_oauth.rs  keys.rs  lib.rs  llm.rs  main.rs  watch.rs
apps/dev-bridge/: package.json  tsconfig.json  vitest.config.ts
apps/dev-bridge/src/: book-files-map.test.ts  book-files-map.ts  book-files.test.ts  book-files.ts  cors-config.test.ts  cors-config.ts  git.test.ts  git.ts  github-oauth.test.ts  github-oauth.ts  llm-keys.test.ts  llm-keys.ts  llm-route.test.ts  llm-route.ts  native-dialog.test.ts  native-dialog.ts  rename-book-file.test.ts  rename-book-file.ts  server.ts
docs/: Inscriva.md  PRD-commercialisation.md  PRD.md
docs/commercialisation/: PRD.md  README.md  implementation-plan.md
docs/commercialisation/decisions/: README.md
docs/commercialisation/epics/: E00-foundation.md  E01-control-plane-backend.md  E02-web-commercial-surfaces.md  E03-bridge-desktop-entitlements.md  E04-ops-legal-admin.md  E05-usage-metering.md  README.md
fixtures/monsterosso/: Monsterosso.md
fixtures/monsterosso/.inscriva/: config.json  index.json
fixtures/monsterosso/00 Canon/: Continuity Log.md
fixtures/monsterosso/00 Canon/Character Bible/: Mara.md
scripts/: render-app-icon.mjs  render-app-icon.test.mjs
(+2 files in other folders)
