[package]
name = "inscriva"
version = "0.0.1"
description = "Inscriva — book-first writing app"
edition = "2021"

[lib]
name = "inscriva_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
keyring = "3"
notify = "8"
dirs = "6"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
futures-util = "0.3"
urlencoding = "2"
getrandom = "0.3"
